--- a/src/index.css
+++ b/src/index.css
@@ -10,15 +10,15 @@
 }
 ::-webkit-scrollbar {
   width: 6px;
-  overflow-y: hidden;
   z-index: 1;
+  height: 80%;
 }
 ::-webkit-scrollbar-thumb {
   background-color: #c6c6c6;
   border-radius: 3px;
 }
 ::-webkit-scrollbar-track {
-  background-color: none;
+  background-color: transparent;
 }
 ::-webkit-scrollbar-button {
   display: none;
